syntax = "proto3";

package hashmap;
option go_package = "https://github.com/silasbue/exam-2021;hashmap";

service Hashmap {
  rpc put (PutRequest) returns (PutReply) {}
  rpc get (GetRequest) returns (GetReply) {}
}

message PutRequest {
  int32 key = 1;
  int32 value = 2;
}

message PutReply {
  bool success = 1;
}

message GetRequest {
  int32 key = 1;
}

message GetReply {
  int32 value = 2;
}
